--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "merge-files": "^0.1.2",
     "node-html-parser": "^1.3.1",
+    "path": "^0.12.7",
     "terser": "^5.3.5"
   },
   "devDependencies": {
