--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "css-editor",
-  "version": "1.0.0",
-  "description": "An on-page CSS Editor",
-  "main": "build.js",
-  "scripts": {
-    "build": "node build.js prod",
-    "build-dev": "node build.js dev",
-    "dev": "dev-refresh src --serve public --cmd 'npm run build-dev'"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dashpilot/dashpilot-website.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dashpilot/dashpilot-website/issues"
-  },
-  "homepage": "https://github.com/dashpilot/dashpilot-website#readme",
-  "dependencies": {
-    "merge-files": "^0.1.2",
-    "node-html-parser": "^1.3.1",
-    "path": "^0.12.7",
-    "terser": "^5.3.5"
-  },
-  "devDependencies": {
-    "clean-css": "^4.2.3",
-    "dev-refresh": "^1.2.1",
-    "watch": "^0.13.0"
-  }
+    "name": "single-file-components-for-vanilla-js",
+    "version": "1.0.1",
+    "description": "Single file components for vanilla javascript",
+    "main": "build.js",
+    "scripts": {
+        "build": "node build.js prod",
+        "build-dev": "node build.js dev",
+        "dev": "dev-refresh src --serve public --cmd 'npm run build-dev'"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dashpilot/dashpilot-website.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/dashpilot/dashpilot-website/issues"
+    },
+    "homepage": "https://github.com/dashpilot/dashpilot-website#readme",
+    "dependencies": {
+        "merge-files": "^0.1.2",
+        "node-html-parser": "^1.3.1",
+        "path": "^0.12.7",
+        "terser": "^5.3.5"
+    },
+    "devDependencies": {
+        "clean-css": "^4.2.3",
+        "dev-refresh": "^1.2.1",
+        "watch": "^0.13.0"
+    }
 }
